# gmm

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.claude/agents/: afk-runner.md
.github/workflows/: ci.yml  release.yml
docs/: antivirus-and-smartscreen.md  testing.md
docs/adr/: 0001-gplv3-and-embed-3dmloader.md  0002-standalone-reimplementation-not-fork.md  0003-junctions-over-symlinks-and-copy.md  0004-conservative-auto-update-defaults.md
docs/agents/: domain.md  issue-tracker.md
docs/architecture/: loader.md
docs/design/: onboarding.md
src/: App.css  App.tsx  ErrorBoundary.tsx  OnboardingWizard.tsx  api.ts  diagnostics.ts  main.tsx  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/loader/: Cargo.toml
src-tauri/crates/loader/src/: error.rs  lib.rs  stub.rs  windows.rs
src-tauri/crates/noop_dll/: Cargo.toml
src-tauri/crates/noop_dll/src/: lib.rs
src-tauri/crates/victim/: Cargo.toml
src-tauri/crates/victim/src/: main.rs
src-tauri/crates/xtask/: Cargo.toml
src-tauri/crates/xtask/src/: main.rs
src-tauri/migrations/: 20260520000001_initial_schema.sql  20260521000001_settings.sql  20260521000002_variants.sql  20260521000003_gamebanana_metadata.sql  20260521000004_mod_updates.sql  20260521000005_active_session.sql
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: av.rs  conflicts.rs  diagnostics.rs  error.rs  gamebanana.rs  games.rs  importer.rs  junction.rs  mod.rs  mod_updates.rs  mods.rs  network.rs  reconcile.rs  session.rs  settings.rs  updates.rs  variants.rs  volume.rs  zip_import.rs
src-tauri/src/core/detect/: endfield.rs  genshin.rs  honkai_impact.rs  mod.rs  star_rail.rs  wuthering.rs  zenless.rs
src-tauri/src/runtime/: mod.rs  session.rs
src-tauri/tests/: adopt.rs  av.rs  commands_ipc.rs  conflicts.rs  detect_endfield.rs  detect_genshin.rs  detect_honkai_impact.rs  detect_star_rail.rs  detect_wuthering.rs  detect_zenless.rs  diagnostics.rs  game_path.rs  gamebanana.rs  importer.rs  junction.rs  library_paths.rs  mod_updates.rs  onboarding.rs  proxy.rs  reconcile.rs  sanitize.rs  sanitize_dedup.rs  sanitize_dos.rs  sanitize_length.rs  session.rs  session_smoke.rs  updates.rs  variants.rs  zip_import.rs
