[package]
name = "gmm"
version = "0.1.0"
description = "Gacha Mod Manager — Tauri desktop mod manager for XXMI-family model importers"
authors = ["Derek Wang <derek@getbite.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/Derek-X-Wang/gmm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gmm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
tokio = { version = "1", features = ["full"] }
ulid = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dirs = "5"
tauri-plugin-dialog = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha2 = "0.10"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
junction = "1"
winreg = "0.55"
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
filetime = "0.2"

