[package]
name = "gmm-loader"
version = "0.1.0"
description = "Rust FFI binding to SpectrumQT/XXMI-Libs-Package's 3dmloader.dll. GPLv3."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2"
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
